--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   "license": [
     "MIT"
   ],
-	"minimum-stability": "dev",
+	"minimum-stability": "stable",
   "authors": [
     {
       "name": "alexeikadev",
